--- a/android_studio_settings/templates/Jonathan.xml
+++ b/android_studio_settings/templates/Jonathan.xml
@@ -82,4 +82,9 @@
       <option name="KOTLIN_CLASS" value="true" />
     </context>
   </template>
+  <template name="activitycontract" value="interface UserAction {&#10;&#10;    fun onCreate()&#10;&#10;    fun onDestroy()&#10;}&#10;&#10;interface Screen" description="" toReformat="false" toShortenFQNames="true">
+    <context>
+      <option name="KOTLIN" value="true" />
+    </context>
+  </template>
 </templateSet>
